<resources>
    <string name="app_name">SuperMarket</string>
    <string name="action_settings">Paramètres</string>
    <!-- Strings used for fragments for navigation -->
    <string name="products_fragment">Produits</string>
    <string name="products_details_fragment">Détails</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="price_format">%.2f€</string>



    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="edit_text1_hint">Nom</string>
    <string name="edit_text2_hint">Prénom</string>
    <string name="share">Share</string>
    <string name="about">A Propos</string>
    <string name="settings">Paramètres</string>
    <string name="open_nav_drawer">Open nav drawer</string>
    <string name="close_nav_drawer">Close nav drawer</string>
    <string name="title_activity_main3">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="name_header">Nom Prénom</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="client_name">Votre test</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="supermarket_4_0">SuperMarket 4.0</string>
    <string name="Settings">Settings</string>
    <string name="Accueil">Accueil</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">S\'inscrire</string>
    <string name="portefeuille">Portefeuille :</string>
    <string name="produits_recommandes">Produits recommandés : </string>
    <string name="rayons">Rayons :</string>
    <string name="confirmer">Confirmer</string>
    <string name="annuler">Annuler</string>
    <string name="panier">Panier</string>
    <string name="login">Login</string>
    <string name="produits">Produits</string>
    <string name="portefeuill_value">XX.XX€</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="checkAddToCart">Ajouter l\'article dans votre panier ?</string>
    <string name="item_added_to_cart">Article ajouté avec succes</string>
    <string name="add">Ajouter</string>
    <string name="item_removed_from_cart">Article supprimé avec succès</string>
    <string name="confirm_buy">Confirmer l\'achat</string>
    <string name="transactions">Transactions</string>
    <string name="transaction_performed">L\'achat a été effectué avec succes</string>

</resources>